fix back face visibility issue.
force back face visibility on native scroller.

--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ body {
     overflow-y:auto;
     overflow-x:hidden;
     -webkit-overflow-scrolling:touch;
-    -webkit-backface-visibility: visible;   
+    -webkit-backface-visibility: hidden;   
     padding:10px;
     padding-top:0px;
 } /* This class is applied to the divs that contain the various "views" or pages of the app. */
